# TT_PreProcessing

./: .env.example  .gitignore  CHANGELOG_SESSION.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_IMPLEMENTATION_PATCHES.md  Makefile  README.md  docker-compose.yml  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_audit.ps1  run_pipeline_no_redact.ps1  run_tests.ps1  setup.py  test_check.py  test_ingestion_pipeline.py  validate.py
.github/workflows/: ci.yml
doc/: Analysis-Review-Final.md  PIANO-DI-LAVORO.md  Preprocessing-Layer-Spec.md  Prompt-Agent-Coding.md
examples/notebooks/: preprocessing_demo.ipynb
examples/sample_emails/: disclaimer_signature.eml  multipart_html.eml  reply_chain.eml  simple_plain.eml  with_pii.eml
k8s/: deployment.yaml
src/: __init__.py  __version__.py  canonicalization.py  config.py  error_handling.py  logging_setup.py  main.py  models.py  parsing.py  pii_detection.py  preprocessing.py
tests/: __init__.py  test_canonicalization.py  test_config.py  test_error_handling.py  test_logging.py  test_main.py  test_models.py  test_parsing.py  test_pii_detection.py  test_preprocessing.py
